# CMakeList.txt : CMake project for com, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (com "com.cpp" "com.h" "Dispose.cpp" "Utils.cpp" "Utils.h")

# TODO: Add tests and install targets if needed.
